<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingEnd="24dp"
    android:paddingStart="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tvSelectTheme"
        android:textColor="@color/colorTextWhite"
        android:textSize="@dimen/r_group_title_text_size" />

    <RadioGroup
        android:id="@+id/rGroupTheme"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:paddingEnd="16dp"
        android:paddingStart="16dp">

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/rButtonNight"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/r_button_padding"
            android:text="@string/night_theme"
            android:textColor="@color/colorTextGreyLight"
            android:textSize="@dimen/r_button_text_size" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/rButtonDay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/r_button_padding"
            android:text="@string/day_theme"
            android:textColor="@color/colorTextGreyLight"
            android:textSize="@dimen/r_button_text_size" />
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/view_element"
        android:textColor="@color/colorTextWhite"
        android:textSize="@dimen/r_group_title_text_size" />

    <RadioGroup
        android:id="@+id/rGroupViewItems"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:paddingEnd="16dp"
        android:paddingStart="16dp">

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/rButtonTextOnly"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/r_button_padding"
            android:text="@string/textOnly"
            android:textColor="@color/colorTextGreyLight"
            android:textSize="@dimen/r_button_text_size" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/rButtonSmallBlock"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/r_button_padding"
            android:text="@string/smallBar"
            android:textColor="@color/colorTextGreyLight"
            android:textSize="@dimen/r_button_text_size" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/rButtonLargeBlock"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/r_button_padding"
            android:text="@string/LargeBar"
            android:textColor="@color/colorTextGreyLight"
            android:textSize="@dimen/r_button_text_size" />
    </RadioGroup>
</LinearLayout>