<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabMinWidth="96dp"
        app:tabMode="scrollable"
        app:tabSelectedTextColor="@color/colorTextPrimary"
        app:tabTextColor="@color/colorTextDark" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v4.view.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/btnFam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_marginBottom="56dp"
            android:layout_marginEnd="8dp"
            android:elevation="6dp"
            fab:menu_colorNormal="@color/colorAccent"
            fab:menu_colorPressed="@color/colorAccentDark"
            fab:menu_colorRipple="#99FFFFFF"
            fab:menu_fab_size="normal"
            fab:menu_icon="@drawable/ic_settings_white_24dp"
            fab:menu_labels_ellipsize="end"
            fab:menu_labels_singleLine="true"
            fab:menu_openDirection="up">

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/btnFab4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add_alert_24dp"
                app:fab_colorNormal="@color/colorAccent"
                app:fab_colorPressed="@color/colorAccentDark"
                app:fab_colorRipple="#99FFFFFF"
                fab:fab_label="@string/fab_notifications"
                fab:fab_size="mini" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/btnFab3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_art_track_white_24dp"
                app:fab_colorNormal="@color/colorAccent"
                app:fab_colorPressed="@color/colorAccentDark"
                app:fab_colorRipple="#99FFFFFF"
                fab:fab_label="@string/fab_viewMode"
                fab:fab_size="mini" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/btnFab1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_favorite_white_24dp"
                app:fab_colorNormal="@color/colorAccent"
                app:fab_colorPressed="@color/colorAccentDark"
                app:fab_colorRipple="#99FFFFFF"
                fab:fab_label="@string/fab_favorites"
                fab:fab_size="mini" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/btnFab2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_rss_feed_24dp"
                app:fab_colorNormal="@color/colorAccent"
                app:fab_colorPressed="@color/colorAccentDark"
                app:fab_colorRipple="#99FFFFFF"
                fab:fab_label="@string/fab_sources"
                fab:fab_size="mini" />
        </com.github.clans.fab.FloatingActionMenu>
    </FrameLayout>


</LinearLayout>